next steps in prepping the project

--- a/RingOfFire/src/app/start-screen/start-screen.component.html
+++ b/RingOfFire/src/app/start-screen/start-screen.component.html
@@ -1,1 +1,6 @@
-<h1>RING OF FIRE</h1>
+<div class="start-screen">
+  <img src="./../../assets/img/ring-of-fire.png" alt="Ring of Fire" />
+  <div class="start-button-box">
+    <img src="./../../assets/img/start-game.jpg" alt="Start Game" />
+  </div>
+</div>
