--- a/RingOfFire/src/app/game/game.component.html
+++ b/RingOfFire/src/app/game/game.component.html
@@ -1,1 +1,25 @@
-<p>game works!</p>
+<div class="field">
+  <div class="card-stack">
+    <img
+      [ngStyle]="{ 'right.px': i * 5 }"
+      *ngFor="let c of [1, 2, 3, 4, 5]; let i = index"
+      src="/assets/img/cards/card_cover.png"
+      alt="Cardback"
+    />
+    <img
+      (click)="takeCard()"
+      class="top-card"
+      style="right: 25px"
+      src="/assets/img/cards/card_cover.png"
+      alt="Cardback"
+    />
+    <img
+      (click)="takeCard()"
+      *ngIf="pickCardAnimation"
+      class="top-card pick-card"
+      style="right: 25px"
+      src="/assets/img/cards/ace_1.png"
+      alt="Cardback"
+    />
+  </div>
+</div>
