--- a/RingOfFire/src/app/game/game.component.scss
+++ b/RingOfFire/src/app/game/game.component.scss
@@ -27,20 +27,23 @@
   }
 }
 
+.played-card {
+  right: 25px;
+  transform: scale(1.5) translate(120px, 150px) rotate(-20deg);
+}
+
 .pick-card {
   animation: pick-card-animation 1s ease-in-out;
+  transform: scale(1.5) translate(120px, 150px) rotate(-20deg);
 }
 @keyframes pick-card-animation {
-  from {
+  0% {
     transform: scale(1);
   }
-  to {
-    transform: scale(1.7);
-  }
   50% {
-    transform: scale(1.7);
+    transform: scale(2);
   }
   100% {
-    transform: scale(1.3) translate(120px, 150px);
+    transform: scale(1.5) translate(120px, 150px) rotate(-20deg);
   }
 }
