--- a/RingOfFire/src/app/game/game.component.scss
+++ b/RingOfFire/src/app/game/game.component.scss
@@ -47,3 +47,8 @@
     transform: scale(1.5) translate(120px, 150px) rotate(-20deg);
   }
 }
+
+.player-position {
+  position: absolute;
+  right: 0;
+}
