--- a/RingOfFire/src/app/game/game.component.html
+++ b/RingOfFire/src/app/game/game.component.html
@@ -1,9 +1,15 @@
+<app-player
+  *ngFor="let player of game.players; let i = index"
+  [name]="player"
+  [ngStyle]="{ 'top.px': 100 + i * 105 }"
+  class="player-position"
+></app-player>
 <div class="field">
   <div class="card-stack">
-    <!--Stack of Cards-->
+    <!--Stack of cards-->
     <img
-      [ngStyle]="{ 'right.px': i * 5 }"
       *ngFor="let c of [1, 2, 3, 4, 5]; let i = index"
+      [ngStyle]="{ 'right.px': i * 5 }"
       src="/assets/img/cards/card_cover.png"
       alt="Cardback"
     />
@@ -16,7 +22,7 @@
       alt="Cardback"
     />
 
-    <!--Card Draw Animation-->
+    <!--Stack of drawn cards-->
     <img
       *ngFor="let card of game.playedCards"
       class="played-card"
@@ -24,7 +30,7 @@
       alt="played Cards"
     />
 
-    <!--Stack of drawn Cards-->
+    <!--Card draw animation-->
     <img
       (click)="takeCard()"
       *ngIf="pickCardAnimation"
