--- a/RingOfFire/src/app/game/game.component.scss
+++ b/RingOfFire/src/app/game/game.component.scss
@@ -58,3 +58,10 @@
   right: 32px;
   bottom: 32px;
 }
+
+.game-info-card {
+  position: absolute;
+  bottom: 32px;
+  left: 100px;
+  right: 100px;
+}
