--- a/RingOfFire/src/app/player/player.component.scss
+++ b/RingOfFire/src/app/player/player.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   font-size: 18px;
-  background-color: orange;
+  background-color: rgb(150, 150, 150);
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
 
@@ -12,9 +12,13 @@
     margin-left: 16px;
   }
   img {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 100%;
   }
+}
+
+.player-active {
+  background-color: orange !important;
 }
